--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="/home/phontera/web development/HTML-personal site/images/phontera.png" width="150" height="150"></td>
+      <td><img src="images/phontera.png" width="150" height="150"></td>
       <td>
         <h1>Phontera</h1>
         <p><em><strong>Musical artiste</strong> & all-round <strong>Creative.</strong> </em></p>
